# SupervDynamModel

./: README.md  pyproject.toml
configs/: default.json
data/: generate_dataset.py
experiments/baseline_mlp/: README.md
scripts/: evaluate.py  train.py
src/SuperDM/: __init__.py
src/SuperDM/data/: __init__.py  dataset.py  preprocessing.py
src/SuperDM/evaluation/: __init__.py  metrics.py  rollout.py
src/SuperDM/models/: __init__.py  mlp.py
src/SuperDM/simulation/: __init__.py  point_mass.py
src/SuperDM/training/: trainer.py
src/SuperDM/utility/: __init__.py  io.py  plotting.py  reproducibility.py
src/SupervDynamModel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_simulation.py
